// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<ul>
  <MockElement
    item={
      Object {
        "label": "Item 1",
        "value": "1",
      }
    }
    key="1"
    removable={false}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 2",
        "value": "2",
      }
    }
    key="2"
    removable={false}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 3",
        "value": "3",
      }
    }
    key="3"
    removable={false}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 4",
        "value": "4",
      }
    }
    key="4"
    removable={false}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 5",
        "value": "5",
      }
    }
    key="5"
    removable={false}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
</ul>
`;

exports[`renders no items 1`] = `
<ul
  onMouseDown={[Function]}
  onMouseOver={[Function]}
>
  <MockElement
    item={
      Object {
        "label": "None",
        "value": "",
      }
    }
    removable={false}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
</ul>
`;

exports[`renders removable 1`] = `
<ul>
  <MockElement
    item={
      Object {
        "label": "Item 1",
        "value": "1",
      }
    }
    key="1"
    removable={true}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 2",
        "value": "2",
      }
    }
    key="2"
    removable={true}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 3",
        "value": "3",
      }
    }
    key="3"
    removable={true}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 4",
        "value": "4",
      }
    }
    key="4"
    removable={true}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 5",
        "value": "5",
      }
    }
    key="5"
    removable={true}
    styles={
      Object {
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "lightgray",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "hasOptions": true,
        "hasSelection": false,
        "multiple": false,
        "optionHighlighted": Array [],
        "rightToLeft": false,
        "width": "600px",
      }
    }
  />
</ul>
`;
